Fix up translation file, make preparations to add swamp

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -1,197 +1,172 @@
+ # Gold to Water
 
- # Requires translation!
-Gift [giftAmount] gold (+[influenceAmount] influence) = Gift [giftAmount] water (+[influenceAmount] influence)
-
- # Requires translation!
-Maritime = Farming
- # Requires translation!
-
-
-
- # Requires translation!
-Gold per turn = Water per turn
-
- # Requires translation!
-Excess production for [wonder] converted to [goldAmount] gold = Excess production for [wonder] converted to [goldAmount] water
-
- # Requires translation!
-We have captured a barbarian encampment and recovered [goldAmount] gold! = We have captured a barbarian encampment and recovered [goldAmount] water!
-
- # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = We have discovered a settlement on an isolated island! The inhabitants send a gift of [goldAmount] water and offer tribute if we respect their sovereignty.
-
- # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = Received [goldAmount] Water for capturing [cityName]
-
- # Requires translation!
-[building] has provided [amount] Gold! = [building] has provided [amount] Water!
-
- # Requires translation!
-Clearing a [forest] has created [amount] Production for [cityName] = Clearing the [forest] has created [amount] Production for [cityName]
-
- # Requires translation!
-Upgrade to [unitType] ([goldCost] gold) = Upgrade to [unitType] ([goldCost] water)
-
- # Requires translation!
-Disband this unit for [goldAmount] gold? = Disband this unit for [goldAmount] water?
-
- # Requires translation!
 Gold = Water
 
- # Requires translation!
+Enter the amount of gold = Enter the amount of water
+
+Gift [giftAmount] gold (+[influenceAmount] influence) = Gift [giftAmount] water (+[influenceAmount] influence)
+
+Build [improvementName] on [resourceName] (200 Gold) = Build [improvementName] on [resourceName] (200 Water)
+
+Diplomatic Marriage ([amount] Gold) = Diplomatic Marriage ([amount] Water)
+
+At least 0 to take gold, at least 30 and size 4 city for worker = At least 0 to take water, at least 30 and size 4 city for worker
+
+Take [amount] gold (-15 Influence) = Take [amount] water (-15 Influence)
+
+Gold per turn = Water per turn
+
+Excess production for [wonder] converted to [goldAmount] gold = Excess production for [wonder] converted to [goldAmount] water
+
+We have captured a barbarian encampment and recovered [goldAmount] gold! = We have captured a barbarian encampment and recovered [goldAmount] water!
+
+Received [goldAmount] Gold for capturing [cityName] = Received [goldAmount] Water for capturing [cityName]
+
+Barbarians raided [cityName] and stole [amount] Gold from your treasury! = Barbarians raided [cityName] and stole [amount] Water from your treasury!
+
+[building] has provided [amount] Gold! = [building] has provided [amount] Water!
+
+Upgrade to [unitType] ([goldCost] gold) = Upgrade to [unitType] ([goldCost] water)
+
+Disband this unit for [goldAmount] gold? = Disband this unit for [goldAmount] water?
+
 Buy for [amount] gold = Buy for [amount] water
 
- # Requires translation!
 Currently you have [amount] gold. = Currently you have [amount] water.
- # Requires translation!
+
 Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Would you like to purchase [constructionName] for [buildingGoldCost] water?
 
- # Requires translation!
 Sell for [sellAmount] gold = Sell for [sellAmount] water
 
- # Requires translation!
 Convert production to gold at a rate of 4 to 1 = Convert production to water at a rate of 4 to 1
 
- # Requires translation!
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Your trade mission to [civName] has earned you [goldAmount] water and [influenceAmount] influence!
 
- # Requires translation!
-Complete all the spaceship parts\n to win! = Complete all the terraformer parts\n to win!
- 
- # Requires translation!
-You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
-
- # Requires translation!
-Spaceship parts remaining = Terraformer parts remaining
-
- # Requires translation!
 Puppeted cities also generate 25% less Gold and Science. = Puppeted cities also generate 25% less Water and Science.
 
- # Requires translation!
 Gold reward for clearing barbarian camps = Water reward for clearing barbarian camps
- 
- 
- # Requires translation!
--[amount]% Gold cost of acquiring tiles [cityFilter] = -[amount]% Water cost of acquiring tiles [cityFilter]
 
- # Requires translation!
 Provides a sum of gold each time you spend a Great Person = Provides a sum of water each time you spend a Great Person
 
- # Requires translation!
 Doubles Gold given to enemy if city is captured = Doubles Water given to enemy if city is captured
 
- # Requires translation!
-Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Enemy land units must spend 1 extra movement point when inside your territory
+-[amount]% Gold cost of acquiring tiles [cityFilter] = -[amount]% Water cost of acquiring tiles [cityFilter]
 
- # Requires translation!
 Gold from all trade routes +25% = Water from all trade routes +25%
 
- # Requires translation!
-Gold cost of upgrading [unitType] units reduced by [amount]% = Water cost of upgrading [unitType] units reduced by [amount]%
+[amount]% Gold cost of upgrading [unitType] units = [amount]% Water cost of upgrading [unitType] units
 
- # Requires translation!
-Spaceship part = Terraformer part
- # Requires translation!
-SS Booster = Solar Shade
+[amount]% Gold cost of upgrading = [amount]% Water cost of upgrading
 
- # Requires translation!
-Enables construction of Spaceship parts = Enables construction of Terraformer parts
- # Requires translation!
-Built Apollo Program = Built Biosphere Project
+[amount]% Gold from Great Merchant trade missions = [amount]% Water from Great Merchant trade missions
 
- # Requires translation!
-SS Cockpit = Terraforming Lab
-
- # Requires translation!
-SS Engine = Ocean Scrubber
-
- # Requires translation!
-SS Stasis Chamber = Atmosphere Processor
-
- # Requires translation!
-[unit] is earned [amount]% faster = [unit] is earned at rate [amount]%
-
- # Requires translation!
 67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment = 67% chance to earn 25 Water and recruit a Barbarian unit from a conquered encampment
- 
- # Requires translation!
+
 50% chance of capturing defeated Barbarian naval units and earning 25 Gold = 50% chance of capturing defeated Barbarian naval units and earning 25 Water
 
-
- # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities = Receive triple Water from Barbarian encampments and pillaging Cities
 
- # Requires translation!
-Gold cost of upgrading [unitType] units reduced by [amount]% = Water cost of upgrading [unitType] units reduced by [amount]%
-
- # Requires translation!
-Double gold from Great Merchant trade missions = Double water from Great Merchant trade missions
-
-
- # Requires translation!
-Gold cost of purchasing [param] units -[amount]% = Water cost of purchasing [param] units -[amount]%
-
- # Requires translation!
 Enables conversion of city production to gold = Enables conversion of city production to water
 
- # Requires translation!
-Grassland = Wasteland
-
- # Requires translation!
-Plains = Badlands
-
- # Requires translation!
-Snow = Permafrost
-
- # Requires translation!
-Provides a one-time Production bonus to the closest city when cut down = Provides a one-time Production bonus to the closest city when cleared
-
- # Requires translation!
-Forest = Rubble
-
- # Requires translation!
-Jungle = Ruins
-
- # Requires translation!
-Marsh = Toxic Waste
-
- # Requires translation!
-Grants 500 Gold to the first civilization to discover it = Grants 500 water to the first civilization to discover it
-
- # Requires translation!
-Costs [amount] gold per turn when in your territory = Costs [amount] water per turn when in your territory
-
- # Requires translation!
-Remove Forest = Remove Rubble
-
- # Requires translation!
-Remove Jungle = Remove Ruins
-
- # Requires translation!
-Remove Marsh = Remove Toxic Waste
-
- # Requires translation!
-Ancient ruins = Survivor camp
-
-# Requires translation!
-No Ancient Ruins = No Survivor Camps
-
- # Requires translation!
 Can undertake a trade mission with City-State, giving a large sum of gold and [amount] Influence = Can undertake a trade mission with City-State, giving a large sum of water and [amount] Influence
 
 Convert gold to science = Convert water to science
 
 Gold -> Science = Water -> Science
 
-All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = All units move through Rubble and Ruins Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel.
-
-You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
-
-# city-state quests
-Send your best explorers on a quest to discover Natural Wonders. Nobody knows the location of [naturalWonder] yet. = Send your best explorers on a quest to discover the wonders of the past. Nobody knows the location of [naturalWonder] yet.
-
-Our people are rejoicing thanks to a tourism boom. For a certain amount of time, any Gold donation will yield [50]% extra Influence. = Our people are prospering. For a certain amount of time, any Water donation will yield [50]% extra Influence.
-
 Give Gold = Give Water
 
-We are suffering great poverty after being robbed by [civName], and unless we receive a sum of Gold, it's only a matter of time before we collapse. = We are suffering great poverty after being robbed by [civName], and unless we receive a sum of Water, it's only a matter of time before we collapse.
+Grants 500 Gold to the first civilization to discover it = Grants 500 water to the first civilization to discover it
+
+Costs [amount] gold per turn when in your territory = Costs [amount] water per turn when in your territory
+
+Can spend Gold to annex or puppet a City-State that has been your ally for [amount] turns. = Can spend Water to annex or puppet a City-State that has been your ally for [amount] turns.
+
+# isolated island
+# can't have bonuses for other natural wonders - sorry, Spain
+
+We have received [goldAmount] Gold for discovering [naturalWonder] = We have discovered a settlement on an isolated island! The inhabitants send a gift of [goldAmount] water and offer tribute if we respect their sovereignty.
+
+# city-state stuff
+
+Maritime = Farming
+
+Find Natural Wonder = Find Ancient Wonder
+
+# great general
+
+[unit] is earned [amount]% faster = [unit] is earned at rate [amount]%
+
+# terrains
+
+Grassland = Wasteland
+
+Plains = Badlands
+
+Snow = Permafrost
+
+Provides a one-time Production bonus to the closest city when cut down = Provides a one-time Production bonus to the closest city when cleared
+
+Clearing a [forest] has created [amount] Production for [cityName] = Clearing the [forest] has created [amount] Production for [cityName]
+
+Forest = Rubble
+
+Jungle = Ruins
+
+Marsh = Toxic Waste
+
+Remove Forest = Remove Rubble
+
+Remove Jungle = Remove Ruins
+
+Remove Marsh = Remove Toxic Waste
+
+Ancient ruins = Survivor camp
+
+No Ancient Ruins = No Survivor Camps
+
+No Natural Wonders = No Ancient Wonders
+
+Natural Wonders = Ancient Wonders
+
+Natural Wonder = Ancient Wonder
+
+# national uniques
+
+All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = All units move through Rubble and Ruins Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel.
+
+Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Enemy land units must spend 1 extra movement point when inside your territory
+
+# great prophet stuff
+
+May not generate great prophet equivalents naturally = May not generate great sage equivalents naturally
+
+Gain enough Faith for [amount]% of a Great Prophet = Gain enough Faith for [amount]% of a Great Sage
+
+Hidden after generating a Great Prophet = Hidden after generating a Great sage
+
+[amount]% Faith cost of generating Great Prophet equivalents = [amount]% Faith cost of generating Great Sage equivalents
+
+# Scientific victory
+
+Complete all the spaceship parts\n to win! = Complete all the terraformer parts\n to win!
+
+Spaceship parts remaining = Terraformer parts remaining
+
+Spaceship part = Terraformer part
+
+SS Booster = Solar Shade
+
+Enables construction of Spaceship parts = Enables construction of Terraformer parts
+
+Built Apollo Program = Built Biosphere Project
+
+Apollo project not built! = Biosphere Project not built!
+
+SS Cockpit = Terraforming Lab
+
+SS Engine = Ocean Scrubber
+
+SS Stasis Chamber = Atmosphere Processor
+
+You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
