--- a/jsons/translations/Template.properties
+++ b/jsons/translations/Template.properties
@@ -200,10 +200,16 @@ Ship Graveyard =
 Soft Drinks Factory =
 
 # Buildings
+Bomb Shelter = 
 Stockpile =
 Ark One =
 Atlas Refuge =
 Eagle Rock Complex =
+Peace Memorial =
+Longhouse =
+The Great Lighthouse =
+Great Mosque =
+Clan Hideout =
 Forum =
 Congress =
 Council =
@@ -213,46 +219,85 @@ Shareholders' Fund =
 Board of Directors =
 Freedom Foundation =
 Think Tank =
+Smugglers' Guild =
+Grand Clan Manor =
 Senate =
 Consulate =
 War Council =
 Seer Council =
+Biosphere Project =
+SS Booster =  // Solar Shade
+SS Cockpit =  // Command Center
+SS Engine =  // Ocean Processor
+SS Stasis Chamber =  // Atmosphere Processor
 Search for Survivors =
 Slaver Guild =
 Conscript Survivors =
+Manhattan Project =
+Satnav Network =
+Cryo Sanctum =
 Search Shelters =
 Public Broadcast =
+Skunkworks =
+Supercollider =
+AI Project =
+Salvage Tank Depot =
+Salvage Bomber =
+Salvage Helicopter =
 Ally with Isolationists =
 Annex Isolationists =
 Faust Project =
+Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... = 
+Nuclear Waste Museum = 
 Excavate Nuclear Waste =
+Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. = 
 Propagate Seeds =
 'What about us? What about all the plans that ended in disaster?'  - Alecia Moor =
 Distribute Soft Drinks =
+E-NERGY ULTRA BRIGHT ZERO EMISSION STEALTH\n(Per 500ml Energy 11kCal(1%**)\nNiacin 43mg(266%**)\nPANTHOTENIC ACID 21mg (350%**)\nCaffeine-B 150mg (600%**)**%RDA)\nZERO SUGAR - JUST AS PUMPED!\nIn collaboration with Gearheads, Musicians, Coders, CEOs, Anarchists, Bikers, Historical Reenactors, Hipsters, and YOU! = 
 Produce Soft Drinks =
 Salvage Army Depot =
+Oh, see the fire is sweepin, our very street today; burns like a red coat carpet, mad bull lost your way.. War, children! It's just a shot away!"  = 
 Salvage Graveyard =
+He who commands the sea has command of everything. =
 Turbine Hall =
+At full capacity, these turbines were able to provide clean electricity for 31,052 homes, offsetting up to 51,997 tons of CO2 each year. =
 Secret Laboratory =
+Open the Vault =
+And I seal up these records, after I have spoken a few words by way of exhortation unto you. = 
 Town Hall =
 Personnel Office =
 Slave Market =
+Casino =
+Plantation =
+Museum =
+Broadcast Tower =
 Television Studio =
 Broadcast Network =
 Distillery =
 Caravan Office =
 Water Plant =
 Water Storage =
+Greywater Treatment Plant =
+Rainwater Purifier =
 Food Store =
+Deep Larder =
 Cold Store =
 Municipal Water =
 Greenhouse =
 Hydroponic Farming =
+Organ Farm =
+Organ Lab =
 Mycoprotein Vats =
 Reclaimation Vats =
 Blood Bank =
+Mosque =
+Domestic Electrification =
+Information Market =
 Study =
 Sanctum =
+Trade College =
+College of Rhetoric =
 College of Mystics =
 Private School =
 Grammar School =
@@ -260,34 +305,48 @@ Initiate School =
 Data Center =
 Media Center =
 Decryption Center =
-Skunkworks =
 Supercollider =
 Communications Satellite =
 Surveillance Satellite =
 Satnav Network =
+Surveillance Satellite =
 Defensive Emplacements =
 Active Denial System =
 Arena =
 Prison Camp =
+Listening Post =
 Black Site =
 Processing Center =
 Legion Camp =
 Guerilla Camp =
+Narcotics Refinery =
 Aerospace Facility =
 Salvage Yard =
+Salvage Exchange =
+Chop Shop =
 Blast Furnace =
+Fuel Depot =
+Oil Plant =
 Oil Refinery =
+Biofuel Refinery =
+Hydro Plant =
 Tidal Plant =
 Coal Plant =
+Nuclear Plant =
 Aluminum Smelter =
 Desalination Plant =
+Aluminum Smelter =
+Urine Recycler =
 Automated Factory =
 Work Camp =
 Refugee Center =
 Plastics Factory =
 Plastics Reprocessor =
+Metal Reprocessor =
+Uranium Centrifuge =
 Carbon Capture =
 Carbon Recapture =
+Fusion Reactor =
 AI Project =
 Arcology Project =
 Arcology Food =
@@ -301,6 +360,9 @@ Cryo Bunker =
 Fish Farm =
 Ocean Seeder =
 Archive of the Arts =
+Nuclear Storage =
+Devil's Nuclear Plant =
+Paradise Alley =
 Encylopedia =
 The Abbey =
 Alma Army Depot =
@@ -309,20 +371,48 @@ Chemical Weapons Laboratory =
 Homestead =
 Silk Road =
 Divine Knowledge =
+Arroyo =
+Ghost Mountain =
 Traditional Farming Methods =
 Alma Air Base =
 Alma Tank Depot =
+Hub Monument =
+Trader's Hub =
+Hub Notfactory =
+Hub Work Camp =
+Mormon Monument =
+Grand Temple =
+Iron Rod Monument =
+Iron Rod Stockpile =
+Arden Monument =
+Land Value Tax =
 Salvage Tank Depot =
 Salvage Bomber =
 Salvage Helicopter =
 Alma Oil Depot =
 Hardened Defenses =
 Choke Points =
+Hardened Defenses =
+Active Denial System =
 Bunker =
 Battery =
+Machinery Production Line =
 Armor Production Line =
 Armament Production Line =
 Military School =
+Ground Control Center =
+Survey Center =
+Operations Center =
+
+Fish Farm =
+Seastead =
+Shrine = 
+Ocean Seeder =
+Monastery =
+Pyramid =
+Garden =
+Holy Fortress =
+Altar of Ignis =
 
 # Policies
 Adaptation =
