--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -200,20 +200,20 @@ Ship Graveyard = Sementerio de Naves
 Soft Drinks Factory = Fábrica de Gaseosas
 
 # Buildings
-Bomb Shelter = 
-Stockpile =
-Ark One =
-Atlas Refuge =
-Eagle Rock Complex =
-Peace Memorial =
-Longhouse =
-The Great Lighthouse =
-Great Mosque =
-Clan Hideout =
-Forum =
-Congress =
-Council =
-Citizens' Assembly =
+Bomb Shelter = Refugio Anti-Bombas
+Stockpile = Reservas
+Ark One = Arco Uno
+Atlas Refuge = Refugio del Atlas
+Eagle Rock Complex = Complejo Roca Águila
+Peace Memorial = Memorial de Paz
+Longhouse = Casa Comunal
+The Great Lighthouse = El Gran Faro
+Great Mosque = Gran Mezquita
+Clan Hideout = Escondite del Clan
+Forum = Foro
+Congress = Congreso
+Council = Consejo
+Citizens' Assembly = 
 Defense Committee =
 Shareholders' Fund =
 Board of Directors =
