--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -213,58 +213,58 @@ Clan Hideout = Escondite del Clan
 Forum = Foro
 Congress = Congreso
 Council = Consejo
-Citizens' Assembly = 
-Defense Committee =
-Shareholders' Fund =
-Board of Directors =
-Freedom Foundation =
-Think Tank =
-Smugglers' Guild =
-Grand Clan Manor =
-Senate =
-Consulate =
-War Council =
-Seer Council =
-Biosphere Project =
-SS Booster =  // Solar Shade
-SS Cockpit =  // Command Center
-SS Engine =  // Ocean Processor
-SS Stasis Chamber =  // Atmosphere Processor
-Search for Survivors =
-Slaver Guild =
-Conscript Survivors =
-Manhattan Project =
-Satnav Network =
-Cryo Sanctum =
-Search Shelters =
-Public Broadcast =
-Skunkworks =
-Supercollider =
-AI Project =
-Salvage Tank Depot =
-Salvage Bomber =
-Salvage Helicopter =
-Ally with Isolationists =
-Annex Isolationists =
-Faust Project =
-Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... = 
-Nuclear Waste Museum = 
-Excavate Nuclear Waste =
-Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. = 
-Propagate Seeds =
-'What about us? What about all the plans that ended in disaster?'  - Alecia Moor =
-Distribute Soft Drinks =
-E-NERGY ULTRA BRIGHT ZERO EMISSION STEALTH\n(Per 500ml Energy 11kCal(1%**)\nNiacin 43mg(266%**)\nPANTHOTENIC ACID 21mg (350%**)\nCaffeine-B 150mg (600%**)**%RDA)\nZERO SUGAR - JUST AS PUMPED!\nIn collaboration with Gearheads, Musicians, Coders, CEOs, Anarchists, Bikers, Historical Reenactors, Hipsters, and YOU! = 
-Produce Soft Drinks =
-Salvage Army Depot =
-Oh, see the fire is sweepin, our very street today; burns like a red coat carpet, mad bull lost your way.. War, children! It's just a shot away!"  = 
-Salvage Graveyard =
-He who commands the sea has command of everything. =
-Turbine Hall =
-At full capacity, these turbines were able to provide clean electricity for 31,052 homes, offsetting up to 51,997 tons of CO2 each year. =
-Secret Laboratory =
-Open the Vault =
-And I seal up these records, after I have spoken a few words by way of exhortation unto you. = 
+Citizens' Assembly = Asamblea Comunal
+Defense Committee = Comité de Defensa
+Shareholders' Fund = Fondos de Accionistas
+Board of Directors = Junta de Directivos
+Freedom Foundation = Fundación de la Libertad
+Think Tank = Tanque de Tinta
+Smugglers' Guild = Gremio de Bandidos
+Grand Clan Manor = Mansión del Gran Clan
+Senate = Senado
+Consulate = Consulado
+War Council = Consejo de Guerra
+Seer Council = Consejo del Vidente
+Biosphere Project = Proyecto Biosfera
+SS Booster = Sombra Solar // Solar Shade
+SS Cockpit = Centro de Comando // Command Center
+SS Engine = Procesador Oceánico // Ocean Processor
+SS Stasis Chamber = Procesador Atmosférico // Atmosphere Processor
+Search for Survivors = Buscar Sobrevivientes
+Slaver Guild = Gremio Esclavista
+Conscript Survivors = Enlistar Sobrevivientes
+Manhattan Project = Proyecto Manjatan
+Satnav Network = Red Satnav
+Cryo Sanctum = Santuario Criogénico
+Search Shelters = Buscar Refugios
+Public Broadcast = Transmisión Pública
+Skunkworks = Planta de Drogas // ¿¿??
+Supercollider = Super Colisionador
+AI Project = Proyecto IA
+Salvage Tank Depot = Restaurar Almacén de Tanques
+Salvage Bomber = Restaurar Bombardero
+Salvage Helicopter = Restaurar Helicoptero
+Ally with Isolationists = Aliarse con los Aislados
+Annex Isolationists = Anexionarse a los Aislados
+Faust Project = Proyecto Fausto
+Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... = Las leyendas cuentan sobre armas, usadas por los reyes de antaño; creadas por magos malvados, de usarlas profano...
+Nuclear Waste Museum = Museo de Desechos Nucleares
+Excavate Nuclear Waste = Excavar Desecho Nuclear
+Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. = Enviar este mensaje era importante para nosotros.\nNos considerabamos como una cultura importante.\nEste lugar no es uno de honor... ningúna hazaña importante es conmemorada aquí.\nLo que hay aquí es agresivo y repulsivo hacia nosotros.\nEste mensaje es una advertencia sobre el peligro.\nEl peligro sigue presente, en tu tiempo, como lo fué en el nuestro.
+Propagate Seeds = Propagar Semillas
+'What about us? What about all the plans that ended in disaster?'  - Alecia Moor = "¿Que hay de nosotros? ¿Que hay de todos los planes que terminaron en desastre?"  - Alicia Moor
+Distribute Soft Drinks = Repartir Gaseosas
+E-NERGY ULTRA BRIGHT ZERO EMISSION STEALTH\n(Per 500ml Energy 11kCal(1%**)\nNiacin 43mg(266%**)\nPANTHOTENIC ACID 21mg (350%**)\nCaffeine-B 150mg (600%**)**%RDA)\nZERO SUGAR - JUST AS PUMPED!\nIn collaboration with Gearheads, Musicians, Coders, CEOs, Anarchists, Bikers, Historical Reenactors, Hipsters, and YOU! =  E-NERGÍA SUPER BRILLANTE SIGILOSA CERO EMISIONES\n(Por cada 500ml de Energía: 11kCal (1%**)\nNiacina 43mg(266%**)\nÁCIDO PATOTENICO 21mg (350%**)\nCafeina-B 150mg (600&**)**%RDA)\nCERO AZUCAR - ¡CON LA MISMA ENERGÍA!\n¡En colaboración con Gearheads, Músicos, Programadores, CEOs, Anarquistas, Motociclistas, Recreadores Historicos, Hipsters, y TÚ!
+Produce Soft Drinks = Producir Gaseosas
+Salvage Army Depot = Restaurar Almacén Militar
+Oh, see the fire is sweepin, our very street today; burns like a red coat carpet, mad bull lost your way.. War, children! It's just a shot away!"  = "Oh, mira, el fuego está arrasando, hoy nuestra propia calle; quema como una alfombra roja, como toro enfurecido hacia ti.. ¡Guerra, hijos! ¡Está a solo un paso!"
+Salvage Graveyard = Restaurar Sementerio
+He who commands the sea has command of everything. = Quién domina el mar domina todo.
+Turbine Hall = Salón de Turbinas
+At full capacity, these turbines were able to provide clean electricity for 31,052 homes, offsetting up to 51,997 tons of CO2 each year. = A capacidad máxima, estas turbinas podían avastecer a 31.052 casas con energía limpia, compensando hasta 51.997 toneladas de CO2 cada año.
+Secret Laboratory = Laboratorio Secreto
+Open the Vault = Abrir la Bóveda
+And I seal up these records, after I have spoken a few words by way of exhortation unto you. = Y ahora sello estos regristros, después de haberte dado unas palabras por medio de la exortación.
 Town Hall =
 Personnel Office =
 Slave Market =
@@ -333,7 +333,6 @@ Hydro Plant =
 Tidal Plant =
 Coal Plant =
 Nuclear Plant =
-Aluminum Smelter =
 Desalination Plant =
 Aluminum Smelter =
 Urine Recycler =
