Added policy keys to Template.properties

--- a/jsons/translations/Template.properties
+++ b/jsons/translations/Template.properties
@@ -200,7 +200,7 @@ Ship Graveyard =
 Soft Drinks Factory =
 
 # Buildings
-Bomb Shelter = 
+Bomb Shelter =
 Stockpile =
 Ark One =
 Atlas Refuge =
@@ -422,38 +422,61 @@ Planned Economy =
 Parallel Markets =
 Adaptation Complete =
 Expansionism =
-Pioneers =
+Restorers =
+Representation =
+Courier Service =
 Reclaimers =
 Citizen Militia =
-Courier Service =
 Expansionism Complete =
-Spoils of War =
+Sovereignty =
+Discipline =
 Doctrine =
+Autocracy =
+Military Tradition =
 Triumph =
 Sovereignty Complete =
-Emission Standards =
-Sample Analysis =
-Technocracy =
-Privatization =
-Venture Capital =
+Theocracy =
+Organized Religion =
+Mandate Of Heaven =
+Indulgences =
+God Emperor =
+Holy Scriptures =
+Theocracy Complete =
+Monopoly =
 Mass Consumption =
+Venture Capital =
+Privatization =
+Entrepreneurship =
 Corporate Personhood =
+Monopoly Complete =
+Constitution =
+Civil Society =
 Protected Speech =
 Public Good =
 Legislative Process =
 Voting Rights =
 Constitution Complete =
-Legacy =
-Special Projects =
-Nationalization =
-Inheritance =
-Endurance Programme =
-Unity =
-Birthright =
-Legacy Complete =
 Supremacy =
+Militarism =
 Scorched Earth =
+Police State =
+Total War =
+Spoils of War =
 Supremacy Complete =
+Collectivism =
+Re-Education =
+Nationalization =
+Political Officers =
+Shared Vision =
+Workers' Union =
+Collectivism Complete =
+Rationalism =
+Educated Elite =
+Skepticism =
+Equipment Upgrades =
+Sample Analysis =
+Technocracy =
+Rationalism Complete =
 
 # Specialists
 Administrator =
