Updated the property list of Korean.properties

--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -200,10 +200,16 @@ Ship Graveyard = 폐선 처리소
 Soft Drinks Factory = 청량 음료 공장
 
 # Buildings
+Bomb Shelter =
 Stockpile =
 Ark One = 방주 1호
 Atlas Refuge =
 Eagle Rock Complex =
+Peace Memorial =
+Longhouse =
+The Great Lighthouse =
+Great Mosque =
+Clan Hideout =
 Forum = 포럼
 Congress = 회의
 Council = 의회
@@ -213,46 +219,85 @@ Shareholders' Fund =
 Board of Directors =
 Freedom Foundation =
 Think Tank = 두뇌 집단
+Smugglers' Guild =
+Grand Clan Manor =
 Senate = 원로원
 Consulate =
 War Council = 전쟁 의회
 Seer Council =
+Biosphere Project =
+SS Booster =  // Solar Shade
+SS Cockpit =  // Command Center
+SS Engine =  // Ocean Processor
+SS Stasis Chamber =  // Atmosphere Processor
 Search for Survivors =
 Slaver Guild =
 Conscript Survivors =
+Manhattan Project =
+Satnav Network =
+Cryo Sanctum = 냉동 성소
 Search Shelters = 대피처 탐색
 Public Broadcast = 대중 방송
+Skunkworks =
+Supercollider =
+AI Project = AI 프로젝트
+Salvage Tank Depot =
+Salvage Bomber =
+Salvage Helicopter =
 Ally with Isolationists = 고립주의자와 동맹맻기
 Annex Isolationists = 고립주의자와 합병하기
 Faust Project = 파우스트 프로젝트
+Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... =
+Nuclear Waste Museum =
 Excavate Nuclear Waste = 핵 폐기물 발굴
+Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. =
 Propagate Seeds =
 'What about us? What about all the plans that ended in disaster?'  - Alecia Moor = '우리는 어떻게 해야하는가? 재앙속에 사라진 계획들은 어쩌고?' - 알레시아 무어
 Distribute Soft Drinks = 청량 음료 배급
+E-NERGY ULTRA BRIGHT ZERO EMISSION STEALTH\n(Per 500ml Energy 11kCal(1%**)\nNiacin 43mg(266%**)\nPANTHOTENIC ACID 21mg (350%**)\nCaffeine-B 150mg (600%**)**%RDA)\nZERO SUGAR - JUST AS PUMPED!\nIn collaboration with Gearheads, Musicians, Coders, CEOs, Anarchists, Bikers, Historical Reenactors, Hipsters, and YOU! =
 Produce Soft Drinks = 청량 음료 생산
 Salvage Army Depot =
+Oh, see the fire is sweepin, our very street today; burns like a red coat carpet, mad bull lost your way.. War, children! It's just a shot away!"  =
 Salvage Graveyard =
+He who commands the sea has command of everything. =
 Turbine Hall =
+At full capacity, these turbines were able to provide clean electricity for 31,052 homes, offsetting up to 51,997 tons of CO2 each year. =
 Secret Laboratory = 비밀 연구소
+Open the Vault =
+And I seal up these records, after I have spoken a few words by way of exhortation unto you. =
 Town Hall =
 Personnel Office =
 Slave Market = 노예 시장
+Casino =
+Plantation =
+Museum =
+Broadcast Tower =
 Television Studio = 텔레비전 스튜디오
 Broadcast Network = 방송 네트워크
 Distillery =
 Caravan Office =
 Water Plant =
 Water Storage = 물 창고
+Greywater Treatment Plant =
+Rainwater Purifier =
 Food Store = 식량 창고
+Deep Larder =
 Cold Store = 냉동 창고
 Municipal Water = 도시 용수
 Greenhouse = 온실
 Hydroponic Farming = 수경 재배
+Organ Farm =
+Organ Lab =
 Mycoprotein Vats =
 Reclaimation Vats =
 Blood Bank = 혈액 은행
+Mosque =
+Domestic Electrification =
+Information Market =
 Study = 서재
 Sanctum = 지성소
+Trade College =
+College of Rhetoric =
 College of Mystics =
 Private School = 사립 학교
 Grammar School = 문법 학교
@@ -260,34 +305,47 @@ Initiate School = 계명의 학교
 Data Center = 데이터 센터
 Media Center = 미디어 센터
 Decryption Center = 암호 해독 센터
-Skunkworks =
 Supercollider =
 Communications Satellite =
 Surveillance Satellite =
 Satnav Network =
+Surveillance Satellite =
 Defensive Emplacements =
 Active Denial System = 능동 분산 체계
 Arena = 경기장
 Prison Camp = 포로수용소
+Listening Post =
 Black Site =
 Processing Center =
 Legion Camp =
 Guerilla Camp =
+Narcotics Refinery =
 Aerospace Facility = 항공 시설
 Salvage Yard =
+Salvage Exchange =
+Chop Shop =
 Blast Furnace =
+Fuel Depot =
+Oil Plant =
 Oil Refinery = 유류 정제소
+Biofuel Refinery =
+Hydro Plant =
 Tidal Plant = 조류 발전소
 Coal Plant = 석탄 발전소
+Nuclear Plant =
 Aluminum Smelter = 알루미늄 용광로
 Desalination Plant = 담수화 플랜트
+Urine Recycler =
 Automated Factory = 자동화 공장
 Work Camp =
 Refugee Center = 난민 센터
 Plastics Factory = 플라스틱 공장
 Plastics Reprocessor = 플라스틱 재처리 공장
+Metal Reprocessor =
+Uranium Centrifuge =
 Carbon Capture = 탄소 포집
 Carbon Recapture = 탄소 재포집
+Fusion Reactor =
 AI Project = AI 프로젝트
 Arcology Project =
 Arcology Food =
@@ -301,6 +359,9 @@ Cryo Bunker = 냉동 벙커
 Fish Farm = 어류 양식장
 Ocean Seeder =
 Archive of the Arts =
+Nuclear Storage =
+Devil's Nuclear Plant =
+Paradise Alley =
 Encylopedia = 백과사전
 The Abbey =
 Alma Army Depot =
@@ -309,20 +370,48 @@ Chemical Weapons Laboratory =
 Homestead =
 Silk Road = 실크 로드
 Divine Knowledge = 신성한 지식
+Arroyo =
+Ghost Mountain =
 Traditional Farming Methods =
 Alma Air Base =
 Alma Tank Depot =
+Hub Monument =
+Trader's Hub =
+Hub Notfactory =
+Hub Work Camp =
+Mormon Monument =
+Grand Temple =
+Iron Rod Monument =
+Iron Rod Stockpile =
+Arden Monument =
+Land Value Tax =
 Salvage Tank Depot =
 Salvage Bomber =
 Salvage Helicopter =
 Alma Oil Depot =
 Hardened Defenses = 강화된 방어
 Choke Points =
+Hardened Defenses = 강화된 방어
+Active Denial System = 능동 분산 체계
 Bunker = 벙커
 Battery = 포대
+Machinery Production Line =
 Armor Production Line = 장갑 생산 라인
 Armament Production Line = 무기 생산 라인
 Military School = 군사 학교
+Ground Control Center =
+Survey Center =
+Operations Center =
+
+Fish Farm = 어류 양식장
+Seastead =
+Shrine =
+Ocean Seeder =
+Monastery =
+Pyramid =
+Garden =
+Holy Fortress =
+Altar of Ignis =
 
 # Policies
 Adaptation = 적응
@@ -333,39 +422,61 @@ Planned Economy = 계획 경제
 Parallel Markets = 암시장
 Adaptation Complete = 적응 정책 완성
 Expansionism = 확장주의
-Pioneers = 선구자
+Restorers =
+Representation =
+Courier Service = 택배 서비스
 Reclaimers = 간척자
 Citizen Militia = 시민 의용군
-Courier Service = 택배 서비스
 Expansionism Complete = 확장주의 정책 완성
 Sovereignty = 자주권
-Spoils of War = 전리품
+Discipline =
 Doctrine = 원칙
+Autocracy =
+Military Tradition =
 Triumph = 대승리
 Sovereignty Complete = 자주권 정책 완성
-Emission Standards = 배기가스 규제
-Sample Analysis = 표본 통계
-Technocracy = 기술관료제
-Privatization = 민영화
-Venture Capital = 벤처 자본
+Theocracy =
+Organized Religion =
+Mandate Of Heaven =
+Indulgences =
+God Emperor =
+Holy Scriptures =
+Theocracy Complete =
+Monopoly =
 Mass Consumption = 대량 소비
+Venture Capital = 벤처 자본
+Privatization = 민영화
+Entrepreneurship =
 Corporate Personhood = 사단 법인
+Monopoly Complete =
+Constitution =
+Civil Society =
 Protected Speech = 표현의 자유
 Public Good = 공공재
 Legislative Process = 입법 절차
 Voting Rights = 투표권
 Constitution Complete = 헌법 정책 완료
-Legacy = 유산
-Special Projects = 특별 프로젝트
-Nationalization = 국민화
-Inheritance = 유산 상속
-Endurance Programme = 지구력 훈련
-Unity = 통합
-Birthright = 생득권
-Legacy Complete = 유산 정책 완료
 Supremacy = 우월
+Militarism =
 Scorched Earth = 그을은 땅
+Police State =
+Total War =
+Spoils of War = 전리품
 Supremacy Complete = 우월 정책 완성
+Collectivism =
+Re-Education =
+Nationalization = 국민화
+Political Officers =
+Shared Vision =
+Workers' Union =
+Collectivism Complete =
+Rationalism =
+Educated Elite =
+Skepticism =
+Equipment Upgrades =
+Sample Analysis = 표본 통계
+Technocracy = 기술관료제
+Rationalism Complete =
 
 # Specialists
 Administrator = 관리자
@@ -636,6 +747,17 @@ Court of Dreams =
 Death Race =
 God Box =
 
+The Mariners =
+Deacon Hopper =
+Marine =
+The sea is ours, and all the dry lands shall soon be as well =
+Ha! You think to challenge us? I hope you can swim well =
+Damn you! We should never have left the protection of the sea. =
+Ahoy! We are the Mariners, and we've come to reclaim the dry land from the lot of you. =
+Greetings, land dweller. =
+What do you want? =
+We've got the finest goods that the sea can offer! What do you say? =
+
 The Archive =
 We shall not go gentle into that good night! =
 After us, the deluge... =
@@ -668,6 +790,16 @@ Ranger Center =
 The Hub =
 Have you ever danced with the devil in the pale moonlight? =
 
+
+# Eras
+Ancient era =
+Classical era =
+Medieval era =
+Renaissance era =
+Industrial era =
+Modern era =
+Information era =
+Future era =
 
 # Techs
 Secrets of the Past = 과거의 비밀
